examples/test/testpolicy11079.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11079
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key24: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value17
          key24: value41
      podSelector:
        matchLabels:
          key45: value11
          key37: value11
          key35: value23
